--- a/hyper/reset.css
+++ b/hyper/reset.css
@@ -44,7 +44,7 @@ table {
 
   @font-face {
 	font-family: 'PPNeueMachina-InktrapRegular';
-	src: url('../fonts/PPNeueMachina-InktrapRegular.woff2') format('woff2'),
-		 url('../fonts/PPNeueMachina-InktrapRegular.woff') format('woff'),
-		 url('../fonts/PPNeueMachina-InktrapRegular.otf') format('opentype');
+	src: url('./fonts/PPNeueMachina-InktrapRegular.woff2') format('woff2'),
+		 url('./fonts/PPNeueMachina-InktrapRegular.woff') format('woff'),
+		 url('./fonts/PPNeueMachina-InktrapRegular.otf') format('opentype');
   }
