--- a/webcam/stylesheet.css
+++ b/webcam/stylesheet.css
@@ -11,6 +11,7 @@ html,body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    overflow: hidden;
 }
 
 canvas {
@@ -28,3 +29,15 @@ button {
 
 }
 
+#interface-container {
+    position:absolute;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: flex-end;
+    align-content: center;
+    padding: 1rem;
+}
